{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 4302,
  "lineage": "7fa05fe2-938f-af86-0a03-f319dd92d297",
  "resources": [
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security",
            "location": "southindia",
            "name": "security",
            "resource_group_name": "myproject_rg",
            "security_rule": [],
            "tags": {
              "Name": "security_wizard"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "security",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "myproject_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.sg",
            "module.azure.azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "security",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "myproject_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "80",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.sg",
            "module.azure.azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security/securityRules/k8s-1",
            "name": "k8s-1",
            "network_security_group_name": "security",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "myproject_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "6443",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.sg",
            "module.azure.azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security/securityRules/k8s-2",
            "name": "k8s-2",
            "network_security_group_name": "security",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "myproject_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "8080",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.sg",
            "module.azure.azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security/securityRules/ping",
            "name": "ping",
            "network_security_group_name": "security",
            "priority": 104,
            "protocol": "Icmp",
            "resource_group_name": "myproject_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.sg",
            "module.azure.azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sgrule7",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security/securityRules/egress",
            "name": "egress",
            "network_security_group_name": "security",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "myproject_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure.azurerm_network_security_group.sg",
            "module.azure.azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "module": "module.azure",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].myazure",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "799ba3db-a98e-4d8c-8f85-b9691105b8aa",
            "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/virtualNetworks/my-vnet",
            "location": "southindia",
            "name": "my-vnet",
            "resource_group_name": "myproject_rg",
            "subnet": [
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/subnet1-public",
                "name": "subnet1-public",
                "security_group": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security"
              },
              {
                "address_prefix": "10.2.2.0/24",
                "id": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/subnet2-private",
                "name": "subnet2-private",
                "security_group": "/subscriptions/ec811817-c2d8-43e4-9334-78b9e9f053c5/resourceGroups/myproject_rg/providers/Microsoft.Network/networkSecurityGroups/security"
              }
            ],
            "tags": {
              "Name": "vpc"
            }
          },
          "dependencies": [
            "module.azure.azurerm_network_security_group.sg",
            "module.azure.azurerm_resource_group.myrg"
          ]
        }
      ]
    }
  ]
}